// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Secondary4Odd /> should render a SECONDARY_4_ODD slice correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH sc-bxivhb ebYlbT"
  >
    <div
      class="sc-htpNat sc-ifAKCX fUITsQ"
    >
      <div>
        Article
      </div>
    </div>
    <div
      class="sc-htpNat sc-EHOje hKTIDV"
    >
      <div>
        Article
      </div>
    </div>
    <div
      class="sc-htpNat sc-ifAKCX fUITsQ"
    >
      <div>
        Article
      </div>
    </div>
    <div
      class="sc-htpNat sc-EHOje hKTIDV"
    >
      <div>
        Article
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Secondary4Odd /> should render a SECONDARY_4_ODD_COLUMNIST slice correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH sc-bxivhb ebYlbT"
  >
    <div
      class="sc-htpNat sc-ifAKCX fUITsQ"
    >
      <div>
        Article
      </div>
    </div>
    <div
      class="sc-htpNat sc-EHOje hKTIDV"
    >
      <div>
        ArticleComment
      </div>
    </div>
    <div
      class="sc-htpNat sc-ifAKCX fUITsQ"
    >
      <div>
        Article
      </div>
    </div>
    <div
      class="sc-htpNat sc-EHOje hKTIDV"
    >
      <div>
        ArticleComment
      </div>
    </div>
  </div>
</DocumentFragment>
`;
